Fix overflow if review contains spoilers

--- a/content/themes/rollekino/sass/views/_single-movie.scss
+++ b/content/themes/rollekino/sass/views/_single-movie.scss
@@ -467,6 +467,7 @@
 
 .block-movie-review {
   > .container {
+    overflow: visible;
     padding-top: 4rem;
 
     @media (max-width: 600px) {
